widgets with swipe

--- a/new-instrument-cluster/CMakeLists.txt
+++ b/new-instrument-cluster/CMakeLists.txt
@@ -29,7 +29,11 @@ qt_add_qml_module(cluster
 		qml/Components/Stat.qml
 		qml/Components/Gauge.qml
 		qml/Components/GaugeWidget.qml
+		qml/Components/WidgetLoader.qml
+		qml/Widgets/BigMeter.qml
+		qml/Widgets/TripComputer.qml
 		qml/Utils/RoundedShape.qml
+		qml/Utils/FilledItem.qml
 	RESOURCES
     images/MainGradient.png
 		icons/gas.svg
